Upgrade to GPT-4o and fix API integration - fully working chatbot

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                                 <div class="hidden sm:flex gap-1">
                                     <button onclick="quality='fast'; render()" class="px-2 py-1 rounded-full border transition-colors ${quality === 'fast' ? 'bg-gray-900 text-white border-gray-900' : (isDark ? 'bg-neutral-800 border-white/10' : 'bg-white')}">Fast</button>
                                     <button onclick="quality='hq'; render()" class="px-2 py-1 rounded-full border transition-colors ${quality === 'hq' ? 'bg-gray-900 text-white border-gray-900' : (isDark ? 'bg-neutral-800 border-white/10' : 'bg-white')}">High quality</button>
-                                    <span class="px-2 py-1 rounded-full border transition-colors ${isDark ? 'bg-neutral-800 border-white/10' : 'bg-white'}">Model: GPT-5</span>
+                                    <span class="px-2 py-1 rounded-full border transition-colors ${isDark ? 'bg-neutral-800 border-white/10' : 'bg-white'}">Model: GPT-4o</span>
                                 </div>
                                 <div class="ml-1 inline-flex rounded-full overflow-hidden border ${isDark ? 'border-white/10' : 'border-gray-200'}">
                                     <button onclick="setTheme('light')" class="px-2 py-1 text-sm transition-colors ${theme==='light' && !isDark ? 'bg-gray-900 text-white' : (isDark ? 'bg-neutral-800' : 'bg-white')}">☀️</button>
