Remove Simple button from navigation - keep only Login and Price

--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@
         <div id="uploadedDocs"></div>
       </div>
       
-      <div class="recent">
-        <h4>RECENT</h4>
-        <div class="item" data-open-tab="AI assistant"><span class="avatar"></span> <div><div>AI assistant</div><div class="tiny">2h ago</div></div></div>
-        <div class="item" data-open-tab="Q3 review"><span class="avatar"></span> <div><div>Q3 review</div><div class="tiny">2h ago</div></div></div>
-        <div class="item" data-open-tab="Contract QA"><span class="avatar"></span> <div><div>Contract QA</div><div class="tiny">2h ago</div></div></div>
+      <div style="margin-top:auto;padding:.8rem;border-top:1px solid var(--border)">
+        <div class="btnbar" style="justify-content:space-between">
+          <button class="ghost" style="font-size:13px">Login</button>
+          <button class="ghost" style="font-size:13px">Price</button>
+        </div>
       </div>
     </aside>
 
